# fastapi-boilerplate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
src/app/: main.py
src/app/api/: __init__.py  healthcheck.py
src/app/api/common/: exceptions.py
src/app/api/common/providers/: stub.py
src/app/api/common/responses/: __init__.py  ok.py  orjson.py  pagination.py
src/app/api/common/responses/serializers/: orjson.py
src/app/api/common/server/: uvicorn.py
src/app/common/: exceptions.py
src/app/common/dto/: __init__.py
src/app/config/: __init__.py  _core.py
tests/integration/: conftest.py  test_healthcheck.py
